# EtherscanCrawler

./: Cargo.toml  README.md
src/: error.rs  handler.rs  main.rs
templates/: error.html  header.html  hello.html  menu.html
templates/book/: list.html  new.html
