[package]
name = "ethcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.16.1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
askama = "0.8"
warp = "0.3.2"
thiserror = "1.0"